Change text for eternal notification

--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -45,11 +45,10 @@
 
     <string name="notification_info_description">Нажмите, чтобы посмотреть подробности</string>
 
-    <string name="notification_eternal_title">Вечный сервис работает</string>
+    <string name="notification_eternal_title">Фоновый сервис для уведомлений</string>
     <string name="notification_eternal_description">
-        Привет! Это уведомление жизненно важно для хорошей работы приложения (чтобы уведомления
-        не исчезали). Вы можете скрыть данный канал в настройках приложения.
-        Просто нажми на меня и настройки откроются.
+        Нажмите сюда для получения информации о том, как скрыть это уведомление, а так же, как
+        предотвратить исчезновение уведомлений у заметок
     </string>
 
     <!-- Button -->
