--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -16,6 +16,8 @@
     <string name="menu_roll_visible">Скрыть выполненные пункты</string>
     <string name="menu_roll_invisible">Показать выполненные пункты</string>
 
+    <string name="menu_video_lesson">Открыть видео урок</string>
+
     <!-- Notifications -->
     <string name="notification_count_channel_title">Количество уведомлений</string>
     <string name="notification_count_channel_description">
