Add video open + try/catch code with new toast + add email for view_about.xml

--- a/app/src/main/res/values-ru/strings_app.xml
+++ b/app/src/main/res/values-ru/strings_app.xml
@@ -87,4 +87,9 @@
 
     <string name="snackbar_action_cancel">Отмена</string>
 
+    <!--  Error text  -->
+    <string name="error_something_wrong">
+        Что-то пошло не так :( Пожалуйста, напишите об этом разработчику на email
+    </string>
+
 </resources>
