--- a/app/src/main/res/layout/view_about.xml
+++ b/app/src/main/res/layout/view_about.xml
@@ -1,63 +1,78 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="@dimen/layout_16dp">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:baselineAligned="false"
         android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="@dimen/layout_16dp">
+        android:orientation="horizontal">
 
         <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.5">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5">
 
             <ImageView
-                    android:id="@+id/about_logo_image"
-                    style="@style/Image.Logo"
-                    android:importantForAccessibility="no"/>
+                android:id="@+id/about_logo_image"
+                style="@style/Image.Logo"
+                android:importantForAccessibility="no" />
 
         </FrameLayout>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="0.5"
+            android:orientation="vertical">
+
+            <TextView
+                style="@style/Text.About.Title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="0.5"
-                android:orientation="vertical">
+                android:text="@string/app_name" />
 
             <TextView
-                    style="@style/Text.About.Title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/app_name"/>
+                android:id="@+id/about_version"
+                style="@style/Text.About.Subtitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/layout_8dp"
+                tools:text="@string/preview_version" />
 
             <TextView
-                    android:id="@+id/about_version"
-                    style="@style/Text.About.Subtitle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/layout_8dp"
-                    tools:text="@string/preview_version"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="@dimen/layout_8dp"
+                android:gravity="center"
+                android:text="@string/dialog_about_developer"
+                android:textAppearance="@style/Appearance.Main"
+                android:textSize="@dimen/text_16sp" />
 
             <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginBottom="@dimen/layout_8dp"
-                    android:gravity="center"
-                    android:text="@string/dialog_about_developer"
-                    android:textAppearance="@style/Appearance.Main"
-                    android:textSize="@dimen/text_16sp"/>
-
-            <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:text="@string/dialog_about_logo_designer"
-                    android:textAppearance="@style/Appearance.Main"
-                    android:textSize="@dimen/text_16sp"/>
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/dialog_about_logo_designer"
+                android:textAppearance="@style/Appearance.Main"
+                android:textSize="@dimen/text_16sp" />
 
         </LinearLayout>
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/about_email"
+        style="@style/Text.About.Subtitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/layout_8dp"
+        tools:text="@string/dialog_about_developer_email" />
 
 </LinearLayout>
