--- a/app/src/main/res/values-ru/strings_help.xml
+++ b/app/src/main/res/values-ru/strings_help.xml
@@ -11,6 +11,9 @@
         3.\n
         4.\n
     </string>
+    <string name="help_notification_disappear_video_url">
+        https://drive.google.com/file/d/1Ldk8aatQ42_9ZwUR0S6sPIjkP33qD8xv
+    </string>
 
     <string name="help_settings_button">Настройки приложения</string>
 
