--- a/app/src/main/res/values/strings_help.xml
+++ b/app/src/main/res/values/strings_help.xml
@@ -6,6 +6,9 @@
         \n1.\n\n2.\n\n3.\n\n4.\n\n5.\n\n6.\n\n7.\n\n8.\n\n9.\n\n10.\n\n11.\n\n12.\n\n13.\n\n14.
         \n\n15.\n\n16.\n\n17.\n\n18.\n\n19.\n\n20.\n\n21.\n\n22.\n\n23.\n\n24.
     </string>
+    <string name="help_notification_disappear_video_url">
+        https://drive.google.com/file/d/1Lf49jBtoVELN9ufmXQMod3Qhugizyi3H
+    </string>
 
     <string name="help_settings_button">Application settings</string>
 
