Add notif_app.png icon + fix wrong word inside strings_help.xml

--- a/app/src/main/res/values/strings_help.xml
+++ b/app/src/main/res/values/strings_help.xml
@@ -4,7 +4,7 @@
     <string name="help_notification_disappear">
         Note:
         \nEveryone has different phones, which makes it difficult to put together a single
-        list of things to do. Someone may have some items in application settings, it all depends
+        list of things to do. Someone may have not some items in application settings, it all depends
         on the phone manufacturer (in such cases skip the step). You can also watch a video
         demonstration by click on the \"video\" icon.
         \n
