--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -7,7 +7,7 @@
     <View
         android:id="@+id/note_toolbar_holder"
         android:layout_width="match_parent"
-        android:layout_height="?actionBarSize"
+        android:layout_height="?attr/actionBarSize"
         android:background="?attr/clPrimary" />
 
     <View
