Add logic for broadcast functions inside Develop screen

--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -73,6 +73,7 @@
     <string name="pref_title_service_alarm_clear" translatable="false">Clear alarms</string>
     <string name="pref_title_service_notify_notes" translatable="false">Notify notes</string>
     <string name="pref_title_service_notify_info" translatable="false">Notify notification count</string>
+    <string name="pref_title_service_notify_alarm" translatable="false">Tidy up and notify alarms</string>
 
     <string name="pref_title_other_reset" translatable="false">Reset preference</string>
 
@@ -235,10 +236,11 @@
     <string name="pref_key_service_refresh" translatable="false">key_service_refresh</string>
     <string name="pref_key_service_run" translatable="false">key_service_run</string>
     <string name="pref_key_service_kill" translatable="false">key_service_kill</string>
-    <string name="pref_key_service_notification_clear" translatable="false">key_service_notification_clear</string>
     <string name="pref_key_service_alarm_clear" translatable="false">key_service_alarm_clear</string>
+    <string name="pref_key_service_notification_clear" translatable="false">key_service_notification_clear</string>
     <string name="pref_key_service_notify_notes" translatable="false">key_service_notify_notes</string>
     <string name="pref_key_service_notify_info" translatable="false">key_service_notify_info</string>
+    <string name="pref_key_service_notify_alarm" translatable="false">key_service_notify_alarm</string>
 
     <string name="pref_key_other_reset" translatable="false">key_other_reset</string>
 
