--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -9,8 +9,8 @@
     android:orientation="vertical"
     tools:context=".presentation.screen.ui.impl.intro.IntroActivity">
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/intro_pager"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/intro_view_pager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -28,25 +28,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <com.rd.PageIndicatorView
+            <ru.tinkoff.scrollingpagerindicator.ScrollingPagerIndicator
                 android:id="@+id/intro_page_indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/layout_8dp"
-                app:piv_animationType="worm"
-                app:piv_dynamicCount="true"
                 android:layout_gravity="center"
-                android:layout_marginEnd="@dimen/layout_1dp"
-                app:piv_interactiveAnimation="true"
-                app:piv_selectedColor="?attr/clContent"
-                app:piv_unselectedColor="?attr/clDisable"
-                app:piv_viewPager="@id/intro_pager" />
+                app:spi_dotColor="?attr/clDisable"
+                app:spi_dotSelectedColor="?attr/clContent"
+                app:spi_dotSelectedSize="@dimen/page_indicator_select_size"
+                app:spi_dotSize="@dimen/page_indicator_size"
+                app:spi_dotSpacing="@dimen/page_indicator_space" />
 
         </FrameLayout>
 
         <TextView
             android:id="@+id/intro_end_button"
             style="@style/Button.Borderless"
+            tools:visibility="invisible"
             android:layout_width="match_parent"
             android:text="@string/info_intro_button" />
 
