Add tests for HelpPreferenceScreen.kt and HelpDisappearScreen.kt

--- a/app/src/main/res/layout/activity_help_disappear.xml
+++ b/app/src/main/res/layout/activity_help_disappear.xml
@@ -42,6 +42,7 @@
     </FrameLayout>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/disappear_settings_button_card"
         style="@style/Card.Text"
         android:layout_height="wrap_content"
         android:layout_marginTop="0dp">
@@ -50,8 +51,6 @@
             android:id="@+id/disappear_settings_button"
             style="@style/Button.Borderless"
             android:layout_width="match_parent"
-            android:clickable="true"
-            android:focusable="true"
             android:text="@string/help_settings_button" />
 
     </androidx.cardview.widget.CardView>
