Add card elevation/radius assertion

--- a/app/src/main/res/layout/inc_toolbar_rank.xml
+++ b/app/src/main/res/layout/inc_toolbar_rank.xml
@@ -29,6 +29,7 @@
                 android:focusableInTouchMode="true"
                 app:cardBackgroundColor="?attr/clBackgroundEnter"
                 app:cardCornerRadius="@dimen/radius_8dp"
+                app:cardElevation="@dimen/elevation_2dp"
                 app:cardUseCompatPadding="false">
 
                 <LinearLayout
