--- a/app/src/main/res/layout/view_sheet_add.xml
+++ b/app/src/main/res/layout/view_sheet_add.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/NavigationView"
+            app:elevation="@dimen/elevation_0dp"
             app:itemTextColor="?attr/clContent"
             app:menu="@menu/sheet_add" />
 
