Refactor dialogs inside app module

--- a/app/src/main/res/values/values_preference.xml
+++ b/app/src/main/res/values/values_preference.xml
@@ -36,6 +36,8 @@
     <bool name="pref_alarm_increase">false</bool>
 
     <bool name="pref_other_develop">false</bool>
+
+    <!--  Day of March when we start our relationships with my wife <3  -->
     <integer name="pref_develop_open">9</integer>
 
 </resources>
