Change storing format of Signal.kt in Preferences.kt

--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -207,7 +207,12 @@
 
     <string name="pref_key_alarm" translatable="false">key_alarm</string>
     <string name="pref_key_alarm_repeat" translatable="false">key_alarm_repeat</string>
-    <string name="pref_key_alarm_signal" translatable="false">key_alarm_signal</string>
+    <!--
+          Deprecated:
+          * key_alarm_signal - it was Int inside Preferences and converting into SignalState via
+                               digit converter.
+    -->
+    <string name="pref_key_alarm_signal" translatable="false">key_alarm_signal_1</string>
     <string name="pref_key_alarm_melody" translatable="false">key_alarm_melody</string>
     <string name="pref_key_alarm_volume" translatable="false">key_alarm_volume</string>
     <string name="pref_key_alarm_increase" translatable="false">key_alarm_increase</string>
