--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -122,10 +122,14 @@
 
     <!-- Preference arrays -->
 
+    <string name="pref_text_app_theme_light">Light</string>
+    <string name="pref_text_app_theme_dark">Dark</string>
+    <string name="pref_text_app_theme_system">System</string>
+
     <string-array name="pref_text_app_theme">
-        <item>Light</item>
-        <item>Dark</item>
-        <item>System</item>
+        <item>@string/pref_text_app_theme_light</item>
+        <item>@string/pref_text_app_theme_dark</item>
+        <item>@string/pref_text_app_theme_system</item>
     </string-array>
 
     <string-array name="pref_text_note_sort">
