--- a/app/src/main/res/values-ru/strings_preference_summary.xml
+++ b/app/src/main/res/values-ru/strings_preference_summary.xml
@@ -7,12 +7,10 @@
     <string name="pref_text_app_theme_dark">Тёмная</string>
     <string name="pref_text_app_theme_system">Системная</string>
 
-    <string-array name="pref_text_note_sort">
-        <item>По времени изменения</item>
-        <item>По времени создания</item>
-        <item>По категориям</item>
-        <item>По цвету</item>
-    </string-array>
+    <string name="pref_text_note_sort_change">По времени изменения</string>
+    <string name="pref_text_note_sort_create">По времени создания</string>
+    <string name="pref_text_note_sort_rank">По категориям</string>
+    <string name="pref_text_note_sort_color">По цвету</string>
 
     <string-array name="pref_text_note_color">
         <item>Красный</item>
