--- a/app/src/main/res/menu/sheet_repeat.xml
+++ b/app/src/main/res/menu/sheet_repeat.xml
@@ -6,19 +6,19 @@
             <group android:checkableBehavior="single">
 
                 <item android:id="@+id/item_repeat_0"
-                        android:title="@string/dialog_repeat_0"/>
+                        android:title="@string/pref_alarm_repeat_0"/>
 
                 <item android:id="@+id/item_repeat_1"
-                        android:title="@string/dialog_repeat_1"/>
+                        android:title="@string/pref_alarm_repeat_1"/>
 
                 <item android:id="@+id/item_repeat_2"
-                        android:title="@string/dialog_repeat_2"/>
+                        android:title="@string/pref_alarm_repeat_2"/>
 
                 <item android:id="@+id/item_repeat_3"
-                        android:title="@string/dialog_repeat_3"/>
+                        android:title="@string/pref_alarm_repeat_3"/>
 
                 <item android:id="@+id/item_repeat_4"
-                        android:title="@string/dialog_repeat_4"/>
+                        android:title="@string/pref_alarm_repeat_4"/>
 
             </group>
         </menu>
