--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -40,7 +40,7 @@
     <string name="pref_title_note_save_period">Period of auto save</string>
 
     <string name="pref_title_alarm">Notifications</string>
-    <string name="pref_title_alarm_repeat">Repeat time</string>
+    <string name="pref_title_alarm_repeat">Default repeat time</string>
     <string name="pref_title_alarm_signal">Signal type</string>
     <string name="pref_title_alarm_melody">Melody</string>
     <string name="pref_title_alarm_volume">Volume</string>
