--- a/app/src/main/res/values/strings_preference_summary.xml
+++ b/app/src/main/res/values/strings_preference_summary.xml
@@ -61,12 +61,18 @@
         <item>@string/pref_note_save_period_7</item>
     </string-array>
 
+    <string name="pref_alarm_repeat_0">10 minutes</string>
+    <string name="pref_alarm_repeat_1">30 minutes</string>
+    <string name="pref_alarm_repeat_2">1 hour</string>
+    <string name="pref_alarm_repeat_3">3 hours</string>
+    <string name="pref_alarm_repeat_4">1 day</string>
+
     <string-array name="pref_alarm_repeat">
-        <item>@string/dialog_repeat_0</item>
-        <item>@string/dialog_repeat_1</item>
-        <item>@string/dialog_repeat_2</item>
-        <item>@string/dialog_repeat_3</item>
-        <item>@string/dialog_repeat_4</item>
+        <item>@string/pref_alarm_repeat_0</item>
+        <item>@string/pref_alarm_repeat_1</item>
+        <item>@string/pref_alarm_repeat_2</item>
+        <item>@string/pref_alarm_repeat_3</item>
+        <item>@string/pref_alarm_repeat_4</item>
     </string-array>
 
     <string-array name="pref_alarm_signal">
