Remove old realization of functions related with melodyItem's from SignalInteractor.kt

--- a/app/src/main/res/values-ru/strings_preference.xml
+++ b/app/src/main/res/values-ru/strings_preference.xml
@@ -95,7 +95,7 @@
     <string name="pref_toast_export_error">Произошла ошибка! Не удалось сохранить файл.</string>
 
     <string name="pref_toast_melody_replace">
-        Извините, мы не смогли установить выбранную мелодию! Мы заменили её. :(
+        Извините, мы не смогли установить выбранную мелодию! Так что мы выбрали другую. :(
     </string>
 
 </resources>
