--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -132,7 +132,7 @@
     <string name="pref_toast_export_error">An error has occurred! Failed to save file.</string>
 
     <string name="pref_toast_melody_replace">
-        Sorry, we can\'t set selected melody! We replace it. :(
+        Sorry, we can\'t set selected melody! So we choose another one. :(
     </string>
 
     <string name="pref_toast_develop_unlock" translatable="false">Hello! You become a developer!</string>
