--- a/app/src/main/res/values-ru/strings_preference_summary.xml
+++ b/app/src/main/res/values-ru/strings_preference_summary.xml
@@ -16,7 +16,7 @@
     <string name="pref_note_color_purple">Фиолетовый</string>
     <string name="pref_note_color_indigo">Индиго</string>
     <string name="pref_note_color_blue">Синий</string>
-    <string name="pref_note_color_turquoise">Бирюзовый</string>
+    <string name="pref_note_color_teal">Бирюзовый</string>
     <string name="pref_note_color_green">Зелёный</string>
     <string name="pref_note_color_yellow">Желтый</string>
     <string name="pref_note_color_orange">Оранжевый</string>
